# api_data_sales_lakehouse

./: .env.example  README.md  pyproject.toml
api_data_sales/: main.py
api_data_sales/config/: settings.py
api_data_sales/models/: clientes_pedidos_schema.py  product_schema.py
api_data_sales/routers/: clientes_pedidos_router.py  produto_router.py
api_data_sales/services/: clientes_pedidos_service.py  produto_service.py
